--- a/player.css
+++ b/player.css
@@ -145,6 +145,8 @@ width: 60px!important;
     flex: 1 1 auto
 }
 
+
+
 .video-js .vjs-time-control {
     -webkit-box-flex: 0 1 auto;
     -moz-box-flex: 0 1 auto;
@@ -152,6 +154,7 @@ width: 60px!important;
     -ms-flex: 0 1 auto;
     flex: 0 1 auto;
     width: auto
+    margin:0px!important;
 }
 
 .video-js .vjs-time-control.vjs-time-divider {
