--- a/player.css
+++ b/player.css
@@ -210,6 +210,17 @@ width: 60px!important;
     top: -1.5em
 }
 
+.video-js .vjs-time-control {
+    -webkit-box-flex: 0 1 auto;
+    -moz-box-flex: 0 1 auto;
+    -webkit-flex: 0 1 auto;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: auto
+    margin:0px!important;
+ 	padding:0px!important;
+}
+
 .video-js .vjs-control-bar {
     -webkit-transition: -webkit-transform .1s ease 0s;
     -moz-transition: -moz-transform .1s ease 0s;
