--- a/player.css
+++ b/player.css
@@ -42,6 +42,7 @@
 
 .vjs-menu-button.vjs-resolution-switcher {
 width: 60px!important;
+font-size: 14px;
 }
 
 .video-js .vjs-resolution-button .vjs-menu li {
@@ -259,13 +260,14 @@ width: 60px!important;
 }
 
 .video-js .vjs-big-play-button {
-    bottom: 42px;
-    left: 45px;
-    top:auto!important;
-    margin-left: -1em;
-    margin-top: -1em;
-    width: 2em;
-    height: 2em;
+  z-index: 99;
+  bottom: 0px;
+  left: 56px;
+  top: auto!important;
+  margin-left: -1em;
+  margin-top: -1em;
+  width: 84px;
+    height: 84px!important;
     line-height: 2em;
     border: none;
     border-radius: 50%;
@@ -373,8 +375,7 @@ width: 60px!important;
     background-color: rgba(255,0,0,0.5);
     font-size: 4em;
     border-radius: 0%;
-    height: 1.2em !important;
-    line-height: 1.2em !important;
+    line-height: 1.6em !important;
     margin-top: -0.6em !important
 }
 
@@ -417,4 +418,5 @@ width: 60px!important;
     left: 0;
     width: 100%;
     height: 100%;
+    font-size: 14px;
 }
