--- a/player.css
+++ b/player.css
@@ -59,8 +59,6 @@ display: -webkit-box;
   font-weight: 600;
 }
 
-
-
 a:-webkit-any-link {
   color: -webkit-link;
   cursor: auto;
@@ -72,14 +70,25 @@ a:-webkit-any-link {
   line-height: 36px!important;
 }
 
-.vjs-menu-button.vjs-resolution-switcher {
+.vjs-resolution-switcher {
 width: 60px!important;
+margin-right:40px!important;
 }
 
 .video-js .vjs-resolution-button .vjs-menu li {
     text-transform: none;
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif
+}
+
+.vjs-menu li {
+  list-style: none;
+  margin: 0;
+  padding: 0.2em 0;
+  line-height: 1.4em;
+  font-size: 1em!important;
+  text-align: center;
+  text-transform: lowercase;
 }
 
  .video-js .vjs-load-progress {
@@ -318,7 +327,7 @@ width: 60px!important;
   width: 10em;
   left: -3em;
   height: 0em;
-  margin-bottom: 1.5em;
+  margin-bottom: 1.3em;
   border-top-color: rgb(0, 0, 0)
 }
 
@@ -327,7 +336,7 @@ width: 60px!important;
   background-color: rgb(0, 0, 0);
   position: absolute;
   width: 100%;
-  bottom: 1.5em;
+  bottom: 1.3em;
   max-height: 15em
 }
 
@@ -449,4 +458,98 @@ width: 60px!important;
     width: 100%;
     height: 100%;
     font-size: 14px;
+}
+
+
+
+
+  
+
+      .vjs-menu {
+        font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+      }
+      .vjs-menu-content {
+        overflow: inherit;
+      }
+      .vjs-menu-item {
+        text-align: left;
+      }
+      .vjs-settings-sub-menu-value,
+      .vjs-settings-sub-menu-title {
+        display: inline-block;
+        padding: 0 5px;
+      }
+      /* .vjs-menu-button-popup > .vjs-menu {
+        width: 17em;
+        left: -10em;
+      }
+      .vjs-menu-button-popup .vjs-settings-sub-menu .vjs-menu {
+        left: -10em;
+      } */
+
+        .vjs-menu-content {
+          bottom: -1.5em;}
+          li {
+            font-size: 1em;
+          }
+         */
+        .vjs-menu-item {
+          text-align: center;
+        }
+
+  
+    .vjs-settings-sub-menu-title {
+      width: 8em;
+      text-transform: initial;
+    }
+
+    .vjs-settings-sub-menu{
+      width: 200px;
+      position: fixed;
+    }
+
+
+    .vjs-settings-menu.vjs-icon-cog.vjs-menu-button.vjs-menu-button-popup.vjs-button+.vjs-menu{
+      width: 30%;
+      /* display: inherit; */
+      position: fixed;
+      float: right;
+      right: 0px;
+      left: auto;
+    }
+
+    .vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button { 
+    float: right;
+    position: absolute;
+    right: 0px;
+    font-size: 14px;
+
+    }
+
+    .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
+      background-color: #2B333F;
+      background-color: rgba(0, 0, 0, 0.85);
+      position: absolute;
+      width: 100%;
+      bottom: 1.3em;
+      max-height: 15em;
+  }
+
+  .video-js .vjs-fullscreen-control {
+    cursor: pointer;
+    -webkit-box-flex: none;
+    -moz-box-flex: none;
+    -webkit-flex: none;
+    -ms-flex: none;
+    flex: none;
+    right: 0px;
+    float: right;
+    position: absolute;
+}
+
+.vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button {
+  float: right;
+  position: absolute;
+  right: 115px;
+  font-size: 14px;
 }
