--- a/player.css
+++ b/player.css
@@ -245,6 +245,7 @@
   width: 280px;
   margin-right: 0px;
   padding-right: 0px;
+  border-top: 5px red solid;
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-item,.video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-title {
@@ -782,7 +783,7 @@ a:-webkit-any-link {
 
     .vjs-menu-button.vjs-menu-button-popup.vjs-control.vjs-button { 
     font-size: 14px;
-
+    width: 3.5em;
     }
 
     .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
