--- a/player.css
+++ b/player.css
@@ -245,7 +245,7 @@
   width: 280px;
   margin-right: 0px;
   padding-right: 0px;
-  border-top: 5px red solid;
+  border-top: 5px red solid!important;
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-item,.video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-title {
