--- a/player.css
+++ b/player.css
@@ -185,15 +185,15 @@
   float: right;
   position: fixed;
   right: 0px;
-  bottom: 35px;
-  width: 280px;
+  bottom: 36px;
+  width: 200px;
   margin-right: 0px;
   padding-right: 0px;
   border-top: 5px red solid!important;
 }
 
 .video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-item,.video-js .vjs-menu-button-popup .vjs-menu .vjs-menu-title {
-  background-color: #000000;
+  background-color: #00000091;
   margin: 0;
   padding: .5em;
   text-align: right!important;
